[package]
name = "pingpong"
version = "0.1.0"
edition = "2021"

[dependencies]
async-mcp = { path = "../.." }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing-subscriber = "0.3"
tracing = "0.1"
home = "0.5.9"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "pingpong"
path = "./src/main.rs"

[[bin]]
name = "pingpong_client"
path = "./src/client.rs"
